--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,5 @@ private:
     key: 4455d224d1b0230a8995a2760040811e
   weather-api:
     key: 56001a90422c4f86ab7123554221802
+  weather-bit:
+    key: 23c5f8a60b39492d95158ff3d4605bde
