--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,16 @@ spring:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:file:~/weather_test_db
+    url: jdbc:h2:file:./weather_test_db
     username: sa
     password:
     driverClassName: org.h2.Driver
+#  jpa:
+#    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+#    hibernate:
+#      ddl-auto: update
+#    generate-ddl: false
+#    show-sql: true
 
 private:
   open-weather-map:
