--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
     generate-ddl: true
-    show-sql: true
+    show-sql: false
 server:
   error:
     include-message: always
@@ -26,5 +26,4 @@ private:
   weather-bit:
     key: 23c5f8a60b39492d95158ff3d4605bde
   cities: London,GB Moscow,RU Tyumen,RU
-  schedule: 0 0/1 * * * ?
-#  schedule: 0 22 10 * * *
+  schedule: 0 0 10 * * *
